<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/miau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_FAQ" />

            <TextView
                android:id="@+id/textView2"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_1" />

            <TextView
                android:id="@+id/textView5"
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_rules_general" />

            <TextView
                android:id="@+id/textView6"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_genereal" />

            <TextView
                android:id="@+id/textView7"
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_playerround" />

            <TextView
                android:id="@+id/textView8"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_playerround" />

            <TextView
                android:id="@+id/textView9"
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_punktevergabe" />

            <TextView
                android:id="@+id/textView10"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_punktevergabe" />

            <TextView
                android:id="@+id/textView11"
                style="@style/subsubtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_table1" />

            <TextView
                android:id="@+id/textView12"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_table1" />

            <TextView
                android:id="@+id/textView13"
                style="@style/subsubtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_table2" />

            <TextView
                android:id="@+id/textView14"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_table2" />

            <TextView
                android:id="@+id/textView15"
                style="@style/subsubtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_pasch" />

            <TextView
                android:id="@+id/textView16"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_pasch" />

            <TextView
                android:id="@+id/textView17"
                style="@style/subsubtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_fullHouse" />

            <TextView
                android:id="@+id/textView18"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_fullHouse" />

            <TextView
                android:id="@+id/textView19"
                style="@style/subsubtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_strasse" />

            <TextView
                android:id="@+id/textView20"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_strasse" />

            <TextView
                android:id="@+id/textView21"
                style="@style/subsubtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/textView22"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_kniffel" />

            <TextView
                android:id="@+id/textView23"
                style="@style/subsubtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_chance" />

            <TextView
                android:id="@+id/textView24"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_chance" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>